@@ -35,6 +35,11 @@ Aeterna - A payment of 750 schmeckles
 Zavos/Ent - Mud Balls / Wisplant-Infused Mud Balls concepts
 Mangochicken - Marigold concept
 
+-Contest Winners-
+Ferox, First Place 02/11/23 - Study structure, green crystals (and hanging crystals) concepts
+n7xe, Second Place 02/11/23 - Flotie of Wrath, overgrown bricks concepts
+Cobra, Third Place 02/11/23 - Floral Tea concept, snake Apotheosis quote
+
 ----Socials / Links----
 These are various links to me/my projects/the Mod's discord. 
 If you have something to say, be it a bug or a report, balance to comment on, or a complaint about the lack of snails, do report it to the Discord.
